Lab3/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI
   36     | RETURN Exp error SEMI
   37     | IF LP error Stmt
   38     | IF error RP Stmt
   39     | IF LP error Stmt ELSE Stmt
   40     | IF error RP Stmt ELSE Stmt
   41     | WHILE error RP Stmt
   42     | WHILE LP error Stmt
   43     | Exp error SEMI

   44 DefList: Def DefList
   45        | %empty

   46 Def: Specifier DecList SEMI
   47    | Specifier error SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 36 37 38 39 40 41 42 43 47
SEMI (258) 4 5 7 29 31 35 36 43 46 47
COMMA (259) 9 22 49 70
LC (260) 12 25
RC (261) 12 25 26
ASSIGNOP (262) 51 52
OR (263) 54
AND (264) 53
RELOP (265) 55
PLUS (266) 56
MINUS (267) 57 61
STAR (268) 58
DIV (269) 59
UMINUS (270)
NOT (271) 62
LP (272) 19 20 32 33 34 37 39 42 60 63 64
RP (273) 19 20 21 32 33 34 38 40 41 60 63 64
LB (274) 18 65
RB (275) 18 65
DOT (276) 66
INT (277) 18 68
FLOAT (278) 69
TYPE (279) 10
STRUCT (280) 12 13
RETURN (281) 31 36
IF (282) 32 33 37 38 39 40
WHILE (283) 34 41 42
ID (284) 14 16 17 19 20 21 63 64 66 67
LOWER_THAN_ELSE (285)
ELSE (286) 33 39 40


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 4 9
Specifier (37)
    on left: 10 11, on right: 4 5 6 7 24 46 47
StructSpecifier (38)
    on left: 12 13, on right: 11
OptTag (39)
    on left: 14 15, on right: 12
Tag (40)
    on left: 16, on right: 13
VarDec (41)
    on left: 17 18, on right: 8 9 18 24 50 51
FunDec (42)
    on left: 19 20 21, on right: 6
VarList (43)
    on left: 22 23, on right: 19 22
ParamDec (44)
    on left: 24, on right: 22 23
CompSt (45)
    on left: 25 26, on right: 6 30
StmtList (46)
    on left: 27 28, on right: 25 27
Stmt (47)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43, on right:
    27 32 33 34 37 38 39 40 41 42
DefList (48)
    on left: 44 45, on right: 12 25 44
Def (49)
    on left: 46 47, on right: 44
DecList (50)
    on left: 48 49, on right: 46 49
Dec (51)
    on left: 50 51, on right: 48 49
Exp (52)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69,
    on right: 29 31 32 33 34 36 43 51 52 53 54 55 56 57 58 59 60 61
    62 65 66 70 71
Args (53)
    on left: 70 71, on right: 63 70


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 17 (VarDec)
    COMMA  reduce using rule 17 (VarDec)
    LB     reduce using rule 17 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  go to state 28


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

   21 FunDec: ID error . RP

    RP  shift, and go to state 32


State 22

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    RP      shift, and go to state 33
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


State 25

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 26

   26 CompSt: error . RC

    RC  shift, and go to state 40


State 27

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   46 Def: Specifier . DecList SEMI
   47    | Specifier . error SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   44 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 31


State 32

   21 FunDec: ID error RP .

    $default  reduce using rule 21 (FunDec)


State 33

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 34

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


State 35

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 23 (VarList)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 40

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 41

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    LC      shift, and go to state 27
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    ID      shift, and go to state 61

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 42

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


State 43

   18 VarDec: VarDec . LB INT RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 25

    $default  reduce using rule 50 (Dec)


State 44

   46 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 45

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 48 (DecList)


State 46

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 47

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 48

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 24 (ParamDec)


State 49

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 50

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 70
    ParamDec         go to state 36


State 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 52

   26 CompSt: error . RC
   35 Stmt: error . SEMI

    SEMI  shift, and go to state 71
    RC    shift, and go to state 40


State 53

   61 Exp: MINUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 72


State 54

   62 Exp: NOT . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 73


State 55

   60 Exp: LP . Exp RP

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 74


State 56

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 57

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 58

   31 Stmt: RETURN . Exp SEMI
   36     | RETURN . Exp error SEMI

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 75


State 59

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP error Stmt
   38     | IF . error RP Stmt
   39     | IF . LP error Stmt ELSE Stmt
   40     | IF . error RP Stmt ELSE Stmt

    error  shift, and go to state 76
    LP     shift, and go to state 77


State 60

   34 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . error RP Stmt
   42     | WHILE . LP error Stmt

    error  shift, and go to state 78
    LP     shift, and go to state 79


State 61

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 67 (Exp)


State 62

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 63

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


State 64

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    LC      shift, and go to state 27
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    ID      shift, and go to state 61

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 82
    Stmt      go to state 64
    Exp       go to state 65


State 65

   29 Stmt: Exp . SEMI
   43     | Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    error     shift, and go to state 83
    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    LB        shift, and go to state 93
    DOT       shift, and go to state 94


State 66

   47 Def: Specifier error SEMI .

    $default  reduce using rule 47 (Def)


State 67

   51 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 95


State 68

   46 Def: Specifier DecList SEMI .

    $default  reduce using rule 46 (Def)


State 69

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 96
    Dec      go to state 45


State 70

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 71

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 72

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    LB   shift, and go to state 93
    DOT  shift, and go to state 94

    $default  reduce using rule 61 (Exp)


State 73

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    LB   shift, and go to state 93
    DOT  shift, and go to state 94

    $default  reduce using rule 62 (Exp)


State 74

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    RP        shift, and go to state 97
    LB        shift, and go to state 93
    DOT       shift, and go to state 94


State 75

   31 Stmt: RETURN Exp . SEMI
   36     | RETURN Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    error     shift, and go to state 98
    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    LB        shift, and go to state 93
    DOT       shift, and go to state 94


State 76

   38 Stmt: IF error . RP Stmt
   40     | IF error . RP Stmt ELSE Stmt

    RP  shift, and go to state 100


State 77

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . error Stmt
   39     | IF LP . error Stmt ELSE Stmt

    error  shift, and go to state 101
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 102


State 78

   41 Stmt: WHILE error . RP Stmt

    RP  shift, and go to state 103


State 79

   34 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error Stmt

    error  shift, and go to state 104
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 105


State 80

   63 Exp: ID LP . Args RP
   64    | ID LP . RP

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 106
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp   go to state 107
    Args  go to state 108


State 81

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 82

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 83

   43 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 109


State 84

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 85

   52 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 110


State 86

   54 Exp: Exp OR . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 111


State 87

   53 Exp: Exp AND . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 112


State 88

   55 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 113


State 89

   56 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 114


State 90

   57 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 115


State 91

   58 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 116


State 92

   59 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 117


State 93

   65 Exp: Exp LB . Exp RB

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 61

    Exp  go to state 118


State 94

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 119


State 95

   51 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
